--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,55 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root{
+    --rojo: #8a0000;
+    --blanco: #ffffff;
+    --fuentePrincipal : 'Racing Sans One', sans-serif;
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+html {
+    box-sizing: border-box;
+    font-size: 62.5%;
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+    margin: 0;
+    padding: 0;
   }
-  to {
-    transform: rotate(360deg);
+  *, *:before, *:after {
+    box-sizing: inherit;
   }
+body{
+    background-color: #000000;
+    height: 100%;
+    backdrop-filter: brightness(50%);
+    background-image: url('../public/background.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin: 0;
+    padding: 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+div{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0;
 }
-
-.card {
-  padding: 2em;
+h1{
+    font-size: 4rem;
+    color: var(--rojo);
+    font-family: var(--fuentePrincipal);
+    text-shadow: 2px 4px 10px  #000000;
 }
-
-.read-the-docs {
-  color: #888;
+button{
+    margin: 50% auto;
+    border: .5px solid #000000;
+    padding: 1rem;
+    border-radius: 5px;
+    color: var(--blanco);
+    background-color: var(--rojo);
+    transition: .3s;
+}
+button:hover{
+    cursor: pointer;
+    background-color: var(--rojo);
+    box-shadow: 1px 1px 10px 5px #000000;
+    transition: .3s;
 }
